<resources>
    <string name="app_name">公卫体检(血压)系统</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

<!--人脸识别-->
    <string name="app_id">59e1677b</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="hint_userId">用户ID</string>
    <string name="hint_idCard">身份证</string>
    <string name="hint_name">姓名</string>
    <string name="hint_number">工号(DXXXXXXXX)</string>
    <string name="hint_phone">手机号</string>
    <string name="hint_password">密码</string>

    <string name="idCard_tip">请输入身份证</string>
    <string name="idCard_error">身份证信息错误</string>
    <string name="name_tip">请输入名字</string>
    <string name="number_tip">请输入工号</string>
    <string name="number_error">工号格式错误</string>
    <string name="phone_tip">请输入手机号码</string>
    <string name="phone_error">手机号码格式错误</string>
    <string name="password_tip">请输入密码</string>
    <string name="password_error">密码长度不能少于6位</string>

    <string name="idcard_pwd_input">请输入身份证或密码</string>

    <string name="btn_login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="btn_register">注册</string>
    <string name="regiester_success">注册成功</string>
    <string name="regiester_fail">注册失败</string>
    <string name="btn_link_to_register">没有账号? 立刻注册.</string>
    <string name="btn_link_to_login">已经注册! 点此登录.</string>
    <string name="welcome">欢迎</string>
    <string name="btn_logout">退出</string>
    <string name="name">全名</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="server_down">服务器开小差啦,马上回来</string>
    <string name="enter_after_login">登录后才能进入</string>

    <string name="home">首页</string>
    <string name="manage">管理</string>
    <string name="user">我的</string>

    <string name="setting_title">设置中心</string>
    <string name="lock_title">锁屏密码</string>
    <string name="lock_face_title">人脸识别</string>

    <string name="resident_name">名字:</string>
    <string name="resident_idcard">身份证号:</string>
    <string name="resident_phone">手机号:</string>
    <string name="resident_address">家庭住址:</string>

    <string name="systolicPressure">收缩压:(mmHg)</string>
    <string name="diastolicPressure">舒张压:(mmHg)</string>
    <string name="meanPressure">平均压:(mmHg)</string>
    <string name="cuffPressure">袖带压:(mmHg)</string>

    <string name="systolicPressure_record">收缩压:</string>
    <string name="diastolicPressure_record">舒张压:</string>
    <string name="meanPressure_record">平均压</string>

    <string name="idcard_error">身份证输入有误,请查证再输入</string>
    <string name="mobile_error">手机号输入有误,请查证再输入</string>

    <string name="all_folder">所有图片</string>
    <string name="sheet">张</string>
    <string name="folder_name">文件名</string>
    <string name="image_num">图片数量</string>
    <string name="temp_date">2017-01-01</string>
    <string name="msg_no_camera">抱歉，没有发现相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>
    <string name="shoot">拍摄照片</string>
    <string name="picture">图片</string>
    <string name="finish">完成</string>
    <string name="open_camera_fail">相册初始化失败!</string>
    <string name="empty_sdcard">没有SD卡</string>

    <string name="notify_title">一次只能勾选一个，多选以最后一次勾选的为准</string>
    <string name="password_no_same">两次密码输入不一致</string>
    <string name="password_explain">4位密码和登录密码无关，用于解锁公卫体检(血压)系统</string>
    <string name="password_wrong">密码输入错误</string>


    <!--通知居民文本-->
    <string name="notify_name">姓名          </string>
    <string name="notify_idcard">身份证                                </string>
    <string name="notify_phone">电话号码                      </string>
    <string name="notify_address">家庭地址                      </string>
    <string name="notify_systolicPressure">收缩压</string>
    <string name="notify_diastolicPressure">舒张压</string>
    <string name="notify_meanPressure">平均压</string>
    <string name="notify_null">    </string>

    <!--体检套餐管理-->
    <string name="Check_One">体检套餐一(年龄)</string>
    <string name="Check_Two">体检套餐二(特殊情况)</string>
    <string name="Check_Three">体检套餐三(其他)</string>

    <string name="Student_package">学生套餐</string>
    <string name="Student_package_money">标准价：￥284 会员价：￥120</string>
    <string name="Student_package_msg">套餐意义：针对于学生体检较全面套餐，可监控基本健康指标</string>
    <string name="Youth_package">青年套餐</string>
    <string name="Youth_package_money">标准价：￥1607  会员价：￥728</string>
    <string name="Youth_package_msg">适用于20~30岁的青年男性，生活、工作压力较大一族</string>
    <string name="Middleage_package">中年套餐</string>
    <string name="Middleage_package_money">标准价：￥1907 会员价：￥768</string>
    <string name="Middleage_package_msg">科学判断身体健康状况，对中年常见疾病可进行全面筛查，同时对疾病风险进行预测</string>
    <string name="Elderly_package">老年套餐</string>
    <string name="Elderly_package_money">标准价：￥2837 会员价：￥1328</string>
    <string name="Elderly_package_msg">父母专享，对老年疾病进行全面筛查，同时对疾病风险进行预测</string>

    <string name="Cardio_cerebrovascular_package">心脑血管套餐</string>
    <string name="Cardio_cerebrovascular_package_money">标准价：￥4265 会员价：￥2688</string>
    <string name="Cardio_cerebrovascular_package_msg">此套餐可全面了解心脑血管健康状况以及相关疾病</string>
    <string name="Hypertension_package">高血压套餐</string>
    <string name="Hypertension_package_money">标准价：￥1547 会员价：￥899</string>
    <string name="Hypertension_package_msg">主要检查血压增高对身体各器官有无损伤，对血压情况进行定期监控</string>
    <string name="Health_care_package">健康护心套餐</string>
    <string name="Health_care_package_money">标准价：￥1234 会员价：￥668</string>
    <string name="Health_care_package_msg">此套餐主要用于评估心脑功能是否良好</string>
    <string name="Health_care_brain_package">健康护脑套餐</string>
    <string name="Health_care_brain_package_money">标准价：￥1009 会员价：￥580</string>
    <string name="Health_care_brain_package_msg">此套餐主要用于评估心脑功能是否良好</string>
    <string name="Immune_function_test_package">免疫功能检测套餐</string>
    <string name="Immune_function_test_package_money">标准价：￥3068 会员价：￥1728</string>
    <string name="Immune_function_test_package_msg">综合排查了解身体抵抗能力、免疫能力差的原因，通过后续健康管理提升受检者健康状况</string>

    <string name="Gynecological_routine_package">妇科常规套餐</string>
    <string name="Gynecological_routine_package_money">标准价：￥1434 会员价：￥798</string>
    <string name="Gynecological_routine_package_msg">此套餐为全面的妇科检查套餐，女性朋友可通过此套餐全面了解自己身体妇科方面的情况</string>
    <string name="Premarital_medical_package">婚前男、女套餐</string>
    <string name="Premarital_medical_package_money">标准价：￥627 会员价：￥320</string>
    <string name="Premarital_medical_package_msg">较全面了解婚前身体情况，筛查身体疾病从而保证婚后的健康生活</string>
    <string name="Pre_pregnancy_medical_package">孕前男、女套餐</string>
    <string name="Pre_pregnancy_medical_package_money">标准价：￥1672 会员价：￥708</string>
    <string name="Pre_pregnancy_medical_package_msg">此套餐是一个较基础的孕前体检套餐，以确保胎儿更加健康地发育</string>
    <string name="Entrance_examination_package">入职基本套餐</string>
    <string name="Entrance_examination_package_money">标准价：￥324 会员价：￥200</string>
    <string name="Entrance_examination_package_msg">针对各企事业单位对员工入职的健康要求所指定的体检套餐</string>

    <!--设置中心-->
    <string name="about_company1">公司名称：\n公司地址：\n 联系电话：\n</string>
    <string name="about_company2">广东伟金科技有限公司\n广东省湛江市赤坎区岭南师范学院\n13414901394</string>
    <string name="about_us_msg">广东伟金科技有限公司成立于2017年09月，专注于医疗服务系统的研究和开发，以“智慧检测”医疗服务软件为核心产品，集合了医疗急救、健康管理、健康教育、导医指南、掌上办证、政务公开等功能，充分满足了用户对自身及家人健康管理需求的同时，也为医院的信息化建设提供了优质的产品服务和创新的解决方案。
</string>
    <string name="user_agreement">一、隐私说明\n
                                    1、以服务用户为目的，此应用可能通过使用用户的个人信息，向用户提供服务，\n
                                    包括但不限于向用户发出活动和服务信息等。\n
                                    2、经用户同意，用户的个人信息可以向第三方披露。\n
                                    3、为提供用户所需求的产品和服务，而必须和第三方分享用户的个人信息。\n
                                  二、免责申明\n
                                    1、此应用提供的任何信息，仅供用户参考，不能作为诊断依据，所有信息需要在医生或\n
                                        药师指导下使用。自行使用者，本公司概不负责，亦不负任何法律责任。\n
                                    2、此应用内容受只是产权法保护，不得擅自复制传播或用于其他商业用途,\n
                                        本应用保留相应的法律权利。\n
                                    3、公卫体检(血压)系统的声明及修改、更新、最终解释权归广东伟金科技有限公司所有\n
                                    </string>

    <string name="loading">加载中</string>
    <string name="changepwd_hint">6-16个字符，区分大小写</string>
    <string name="oldpwd_not_input">您还未输入旧密码</string>
    <string name="oldpwd_error">旧密码输入错误</string>
    <string name="newpwd_not_input">您还未输入新密码</string>
    <string name="pwd_less_six">密码长度不能小于6个字符</string>
    <string name="pwd_inconformity">两次密码输入不一致</string>
    <string name="pwd_empty">请输入相应参数</string>
</resources>
