<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/notify_title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/notify_tv"
            android:text="@string/notify_name"/>
        <TextView
            style="@style/notify_tv"
            android:text="@string/notify_idcard"/>
        <TextView
            style="@style/notify_tv"
            android:text="@string/notify_phone"/>
        <TextView
            style="@style/notify_tv"
            android:text="@string/notify_address"/>
        <TextView
            style="@style/notify_tv"
            android:text="@string/notify_systolicPressure"/>
        <TextView
            style="@style/notify_tv"
            android:text="@string/notify_diastolicPressure"/>
        <TextView
            style="@style/notify_tv"
            android:text="@string/notify_meanPressure"/>
        <TextView
            style="@style/notify_tv"
            android:text="@string/notify_null"/>
    </LinearLayout>
    <ListView
        android:id="@+id/lv_notify"
        android:layout_weight="1"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </ListView>
    <Button
        android:id="@+id/btn_confirm"
        android:text="确认"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"/>

</LinearLayout>
