<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:text="2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/home_manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@mipmap/home"
                android:gravity="center_horizontal"
                android:text="@string/home"
                android:textColor="@color/radiobutton_selector" />

            <RadioButton
                android:id="@+id/manage_manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@mipmap/manage"
                android:gravity="center_horizontal"
                android:text="@string/manage"
                android:textColor="@color/radiobutton_selector" />

            <RadioButton
                android:id="@+id/user_manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@mipmap/user"
                android:gravity="center_horizontal"
                android:text="@string/user"
                android:textColor="@color/radiobutton_selector" />

    </LinearLayout>

</LinearLayout>
