<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.niwj.graduationproject.view.CircleImageView
                android:id="@+id/userIcon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:civ_border_color="@color/background_color"
                app:civ_border_width="1dp" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="倪伟金"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:background="@color/setting_background_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_settings"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_user_settings" />

            <TextView
                style="@style/me_menu_text"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/setting_title" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/setting_background_color" />


        <LinearLayout
            android:id="@+id/ll_lock"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_user_settings" />

            <TextView
                style="@style/me_menu_text"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/lock_title" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/setting_background_color" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/setting_background_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/home_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@mipmap/home"
                android:gravity="center_horizontal"
                android:text="@string/home"
                android:textColor="@color/radiobutton_selector" />

            <RadioButton
                android:id="@+id/manage_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@mipmap/manage"
                android:gravity="center_horizontal"
                android:text="@string/manage"
                android:textColor="@color/radiobutton_selector" />

            <RadioButton
                android:id="@+id/user_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@mipmap/user"
                android:gravity="center_horizontal"
                android:text="@string/user"
                android:textColor="@color/radiobutton_selector" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
